# multiverseMySQL

./: README.md
sql-app/: Makefile  example.cc  main  main.cc  policy.sql  policy.txt  sql_proxy.cc  sql_proxy.hh  sql_server.cc  sql_server.hh  sql_user.hh
sql-app/generator/: Makefile  generator  generator.cc
sql-app/multi_client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  multiverse.grpc.pb.cc  multiverse.grpc.pb.h  multiverse.pb.cc  multiverse.pb.h  multiverse.proto  multiverse_client.cc  multiverse_client.hh  multiverse_proxy.cc  multiverse_proxy.hh
sql-app/single_client/: Makefile  main  main.cc
